public/css/default.css
/*auto*/

html,body { height: 100%; overflow: hidden; }
body { height: 100%; overflow: hidden; background: #808080 linear-gradient(#899aa4,#e9d0aa); background-size: cover; }

.ui-dark { color: #C0C0C0; }

header { height: 45px; border-bottom: 1px solid rgba(0,0,0,0.2); background: #303030 linear-gradient(#303030,#353535); position: fixed; z-index: 35; width: 100%; top: -50px; color: #909090; transition: all 0.3s; box-shadow: 0 5px 5px rgba(0,0,0,0.15); }
header .nav { float: left; width: 70%; overflow: hidden; height: 45px; }
header .nav > div { overflow-x: scroll; width: 100%; height: 80px; overflow-scrolling: touch; }
header nav { width: 5000px; height: 45px; }
header nav button { outline: 0; background-color: transparent; border: 0; padding: 0; margin: 0; width: 45px; height: 44px; border-right: 1px solid rgba(0,0,0,0.2); cursor: pointer; vertical-align: top; color: white; line-height: 0; }
header nav button:first-child { border-left: 1px solid rgba(0,0,0,0.2);  }
header nav button img { width: 25px; height: 25px; border-radius: 3px; }
header nav button:hover { background-color: rgba(0,0,0,0.1); }
header nav button.focused { background-color: #4c4c4c; }
header nav button > .fa { font-size: 20px; }
header nav > .fa { position: absolute; margin: 5px 35px; color: red; cursor: pointer; }
header .datetime { background-color: rgba(0,0,0,0.15); height: 45px; float: right; width: 150px; padding: 6px 0 0; text-align: center; font-size: 12px; line-height: 15px; color: white; cursor: default; }
.header-show { top: 0; }

footer { height: 30px; position: absolute; bottom: 0; left: 0; right: 0; background: #303030 linear-gradient(#303030,#353535); box-shadow: 0 5px -5px rgba(0,0,0,0.2); color: white; }
.light footer { background: #E0E0E0 linear-gradient(#F0F0F0,#EAEAEA); box-shadow: 0 5px -5px rgba(0,0,0,0.02); color: black; }

.username { float: right; font-size: 12px; margin: 7px 10px 0 0; cursor: pointer; }
.username:hover { opacity: 0.7; }
.username i { margin-right: 5px; }
.console { font-size: 12px; cursor: pointer; margin: 7px 0 0 10px; float: left; }
.console i { margin-right: 5px; }
.console:hover { opacity: 0.7; }
.testmode { float: right; background-color: red; color: white; font-size: 10px; font-weight: bold; padding: 0 3px; line-height: 16px; margin: 6px 10px 0 0; border-radius: 3px; }

.startmenu { position: fixed; top: 45px; height: 500px; background-color: #404040; width: 500px; z-index: 32; border-radius: 0 0 3px 0; box-shadow: 10px 10px 20px rgba(0,0,0,0.1); transition: all 0.1s; opacity: 0; transform: translate(0px, -80px); }
.startmenu-title { height: 50px; border-top: 1px solid rgba(0,0,0,0.1); color: white; font-size: 16px; padding: 0; font-weight: bold; }
.startmenu-title img { width: 32px; height: 32px; border-radius: 100px; float: left; margin: 9px 0 0 14px; }
.startmenu-title > span { float: left; margin: 14px 0 0 12px; }
.startmenu-title button { float: right; color: white; margin: 10px 10px 0 0; display: none; background: transparent; text-align: center; border: 0; font-size: 20px; }
.startmenu-apps { padding: 0 0 15px; margin-right: 200px; overflow: hidden; }
.startmenu-apps-container { height: 386px; overflow-y: auto; width: 330px; padding: 5px 0; overflow-scrolling: touch; }
.startmenu-nav { float: right; width: 200px; height: 450px; background-color: #404040; border-left: 1px solid rgba(0,0,0,0.1); }
.startmenu-nav nav button { display: block; border: 0; border-bottom: 1px solid rgba(0,0,0,0.1); padding: 5px 0; width: 100%; background-color: transparent; text-align: left; outline: 0; color: #D0D0D0; }
.startmenu-nav nav button:hover { text-decoration: none; color: white; }
.startmenu-nav nav button:last-child { border-bottom: 0; }
.startmenu-nav .fa { width: 25px; border-right: 1px solid rgba(0,0,0,0.1); margin-right: 8px; }
.startmenu-nav > div { height: 100%; background-color: rgba(120,120,120,0.1); padding: 10px 15px; }
.startmenu-search { padding: 5px; margin-bottom: 5px; background-color: #383838; }
.startmenu-status { float: right; color: gray; background-color: rgba(0,0,0,0.05); text-align: left; font-weight: normal; line-height: 16px; padding: 10px 5px 0 10px; height: 50px; width: 200px; border-left: 1px solid rgba(0,0,0,0.1); cursor: pointer; }
.startmenu-status:hover { background-color: rgba(255,255,255,0.1); }
.startmenu-status b { display: block; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; color: white; font-size: 14px; }
.startmenu-status i { font-size: 10px; float: left; margin: 3px 4px 0 0; }
.startmenu-status span { display: block; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; font-size: 11px; }
.startmenu-search .ui-textbox { height: 34px; background-color: #383838; }
.startmenu-search .ui-textbox-input { padding: 9px 4px 0 10px; }
.startmenu-search .ui-textbox input { font-size: 16px; background-color: #383838; color: white; }
.startmenu-search .ui-textbox-control { width: 40px; border-left: 0; color: gray; }
.startmenu-search input:-webkit-autofill, .startmenu-search input:-webkit-autofill:hover, .startmenu-search input:-webkit-autofill:active, .startmenu-search input:-webkit-autofill:focus { background-color: #303030 !important; color: white !important; -webkit-box-shadow: 0 0 0 1000px #303030 inset !important; -webkit-text-fill-color: white !important; }

.startmenu-visible { opacity: 1; transform: translate(0px, 0px); }
.startmenu .ui-textbox { border: 0; }
.startmenu .ui-textbox-input { padding-left: 10px; padding-left: 10px; }

.light .startmenu-status b { color: black; }
.light .startmenu-nav nav button:hover { color: #404040; }
.light header { background: #E0E0E0 linear-gradient(#E9E9E9,#DEDEDE); box-shadow: 0 5px 5px rgba(0,0,0,0.02); border-color: rgba(0,0,0,0.2); }
.light header nav button { color: #505050; border-right-color: rgba(0,0,0,0.1); }
.light header nav button:first-child { border-left-color: rgba(0,0,0,0.1); }
.light header nav button.focused { background-color: #D0D0D0; }
/* ... */

